add sponsorship tiers

--- a/index.css
+++ b/index.css
@@ -7,10 +7,9 @@
     @apply container py-8 lg:py-16;
   }
   h2 {
-    @apply pb-8 text-orange font-header text-5xl font-bold;
+    @apply pb-8 font-header text-5xl font-bold text-gold;
   }
-  input{
-    @apply outline-none
+  input {
+    @apply outline-none;
   }
-  
 }
