--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     @apply container py-8 lg:py-16;
   }
   h2 {
-    @apply pb-8 font-header text-5xl font-bold text-gold;
+    @apply pb-8 font-header text-5xl font-bold text-transparent;
   }
   input {
     @apply appearance-none;
