--- a/index.css
+++ b/index.css
@@ -7,7 +7,7 @@
     @apply container py-8 lg:py-16;
   }
   h2 {
-    @apply inline-block bg-clip-text font-header text-5xl font-bold text-transparent;
+    @apply bg-clip-text pb-8 text-5xl font-bold text-transparent;
   }
 }
 
