--- a/index.css
+++ b/index.css
@@ -15,6 +15,10 @@ input:focus {
   outline: 0px none transparent;
 }
 
+input[type=checkbox]:focus {
+  outline: 1px solid;
+}
+
 @property --deg1 {
   syntax: "<angle>";
   inherits: false;
