set up email env

--- a/emails/templates/hackerConfirmation.html
+++ b/emails/templates/hackerConfirmation.html
@@ -4,12 +4,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title></title>
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <div class="h-full w-full bg-black">
-      test
+    <div class="h-full w-full bg-blue-dark">
       <h2>huh</h2>
+      <span class="w-full">huh</span>
     </div>
   </body>
 </html>
