fix mobile menu links

--- a/index.css
+++ b/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* TODO: edit scroll bar */
 @layer base {
   section {
     @apply container py-8 lg:py-16;
