--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
     @apply container py-8 lg:py-16;
   }
   h2 {
-    @apply bg-clip-text font-header text-5xl font-bold text-transparent;
+    @apply bg-clip-text text-5xl font-bold text-transparent;
   }
 }
 
