--- a/emails/styles.css
+++ b/emails/styles.css
@@ -564,16 +564,42 @@ video {
   }
 }
 
+.mx-48 {
+  margin-left: 12rem;
+  margin-right: 12rem;
+}
+
+.mx-96 {
+  margin-left: 24rem;
+  margin-right: 24rem;
+}
+
+.mx-\[30rem\] {
+  margin-left: 30rem;
+  margin-right: 30rem;
+}
+
+.mx-\[32rem\] {
+  margin-left: 32rem;
+  margin-right: 32rem;
+}
+
+.mx-\[3rem\] {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .flex {
   display: flex;
 }
 
 .aspect-square {
   aspect-ratio: 1 / 1;
-}
-
-.h-40 {
-  height: 10rem;
 }
 
 .h-8 {
@@ -586,6 +612,26 @@ video {
 
 .w-full {
   width: 100%;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
+.w-\[\] {
+  width: ;
+}
+
+.w-\[50rem\] {
+  width: 50rem;
+}
+
+.w-\[52rem\] {
+  width: 52rem;
+}
+
+.w-\[48rem\] {
+  width: 48rem;
 }
 
 .flex-col {
@@ -604,6 +650,14 @@ video {
   gap: 1.5rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
+.gap-4 {
+  gap: 1rem;
+}
+
 .bg-blue-dark {
   --tw-bg-opacity: 1;
   background-color: rgb(0 82 116 / var(--tw-bg-opacity));
@@ -617,13 +671,42 @@ video {
   fill: #ffbd59;
 }
 
+.p-8 {
+  padding: 2rem;
+}
+
+.p-16 {
+  padding: 4rem;
+}
+
+.p-12 {
+  padding: 3rem;
+}
+
 .py-12 {
   padding-top: 3rem;
   padding-bottom: 3rem;
 }
 
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
 .pb-12 {
   padding-bottom: 3rem;
+}
+
+.pt-12 {
+  padding-top: 3rem;
+}
+
+.pt-8 {
+  padding-top: 2rem;
+}
+
+.text-center {
+  text-align: center;
 }
 
 .underline {
