--- a/emails/templates/hackerConfirmation.html
+++ b/emails/templates/hackerConfirmation.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-  <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title></title>
-    <link rel="stylesheet" href="../styles.css" />
-  </head>
-  <body>
-    <div class="h-full w-full bg-blue-dark">
-      <h2>huh</h2>
-      <span class="w-full">huh</span>
-    </div>
-  </body>
-</html>
+<h2 style="padding-bottom: 1rem;">Hi {{ name }}!</h2>
+<p style="padding-bottom: 0.5rem;">Thank you for applying to Hack the Nest - we're so excited to see you in Sterling this September!</p>
+<p>Please be on the lookout for more details via email, social media (linked below), and our <a
+    style="text-decoration: underline; color: #2386bf;" href="https://www.hackthenest.org/"
+    target="_blank">website</a> as the event
+  approaches, and
+  feel free to let us know if you have any questions.</p>
+<p style="padding-top: 1rem;">- Hack the Nest Team 🪺</p>
