--- a/emails/templates/hackerConfirmation.html
+++ b/emails/templates/hackerConfirmation.html
@@ -1,7 +1,7 @@
 <h2 style="padding-bottom: 1rem;">Hi {{ name }}!</h2>
 <p style="padding-bottom: 0.5rem;">Thank you for applying to Hack the Nest - we're so excited to see you in Sterling this September!</p>
 <p>Please be on the lookout for more details via email, social media (linked below), and our <a
-    style="text-decoration: underline; color: #2386bf;" href="https://www.hackthenest.org/"
+    style="text-decoration: underline;" href="https://www.hackthenest.org/"
     target="_blank">website</a> as the event
   approaches, and
   feel free to let us know if you have any questions.</p>
