add two weeks email

--- a/emails/templates/twoWeeks.html
+++ b/emails/templates/twoWeeks.html
@@ -1,6 +1,6 @@
 <h2 style="padding-bottom: 1rem;">Hi Hacker!</h2>
 <p style="padding-bottom: 0.5rem;">
-  Hack the Nest is exactly TWO WEEKS away! This means RSVP is now open - confirm your attendance in your
+  Hack the Nest is exactly TWO WEEKS away! This means RSVP is now open - confirm your spot via your
   <a style="text-decoration: underline;" href="https://www.hackthenest.org/dashboard" target="_blank">dashboard</a>
   by September 20. Don't miss out on this season's only MLH Member Event organized by and for high school students, with
   free food and shirts and over $10,000 in prizes including Nintendo Switches, gaming keyboards, Beats wireless earbuds,
@@ -8,7 +8,9 @@
 </p>
 <p style="padding-bottom: 0.5rem;">
   Worried about transportation? Take a look at
-  <a style="text-decoration: underline; padding-bottom: 0.5rem;" href="https://gas.hackclub.com/">Hack Club's new Gas Fund initiative</a>
+  <a style="text-decoration: underline; padding-bottom: 0.5rem;" href="https://gas.hackclub.com/" target="_blank">
+    Hack Club's new Gas Fund initiative
+  </a>
   for free travel reimbursements!
 </p>
 <p style="padding-bottom: 0.5rem;">
