--- a/emails/templates/layout.html
+++ b/emails/templates/layout.html
@@ -24,6 +24,11 @@
       /* 6 */
     }
 
+    a {
+      text-decoration: underline;
+      color: #2386bf;
+    }
+
     /*
 1. Remove the margin in all browsers.
 2. Inherit line-height from `html` so users can set them as a class directly on the `html` element.
@@ -407,7 +412,8 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
         <img style="height: 1.5rem; width: 1.5rem;" src="hackthenest.org/facebook.png" />
       </a>
 
-      <a style="height: 1.5rem; width: 1.5rem;" href="https://www.twitter.com/hackthenest" target="_blank" rel="noreferrer">
+      <a style="height: 1.5rem; width: 1.5rem;" href="https://www.twitter.com/hackthenest" target="_blank"
+        rel="noreferrer">
         <img style="height: 1.5rem; width: 1.5rem;" src="hackthenest.org/twitter.png" />
       </a>
 
