--- a/emails/templates/hackerConfirmation.html
+++ b/emails/templates/hackerConfirmation.html
@@ -1,8 +1,13 @@
 <h2 style="padding-bottom: 1rem;">Hi {{ name }}!</h2>
-<p style="padding-bottom: 0.5rem;">Thank you for registering for Hack the Nest - we're so excited to see you in Sterling this September!</p>
-<p>Please be on the lookout for more details via email, social media (linked below), and our <a
-    style="text-decoration: underline;" href="https://www.hackthenest.org/"
-    target="_blank">website</a> as the event
+<p style="padding-bottom: 0.5rem;">Thank you for registering for Hack the Nest - we're so excited to see you in Sterling
+  this September! Please be sure to RSVP
+  <a style="text-decoration: underline; color: #2386bf"
+    href="https://docs.google.com/forms/d/e/1FAIpQLScOMM4ESVuRi23QwTFwy-8yV-3DJ28m-sK_p4Qa6xeqXtCOuw/viewform?usp=sf_link">here</a>
+  by September 20 11:59pm.
+</p>
+<p>Be on the lookout for more details via email, social media (linked below), and our <a
+    href="https://www.hackthenest.org/" target="_blank">website</a> as the event
   approaches, and
-  feel free to let us know if you have any questions.</p>
+  feel free to let us know at hello@hackthenest.org if you have any questions.
+</p>
 <p style="padding-top: 1rem;">- Hack the Nest Team 🪺</p>
