edit schedule, sponsors, faq content

--- a/emails/templates/venueUpdate.html
+++ b/emails/templates/venueUpdate.html
@@ -3,9 +3,13 @@
   Hope you are doing well. First and foremost, thank you so much for your patience in bearing with us through the
   unexpected venue situation. We understand that the last minute change was very disappointing and apologize for not
   finding a suitable venue sooner.
-<p style="padding-bottom: 0.5rem;">
-  That being said, <strong>Hack the Nest is coming to Tysons, VA this December 9 - 10!</strong> We're so excited to 
 </p>
+<p style="padding-bottom: 0.5rem;">
+  That being said, <strong>Hack the Nest is coming to Tysons, VA this December 9 - 10!</strong> We're super excited to .
+  schedule, preview
+</p>
+<p style="padding-bottom: 0.5rem;">
+  rsvp form, discord link, schedule, more details coming soon (parking, overnight, what to bring, arrival/dept.)
 </p>
 <p style="padding-bottom: 0.5rem;">
   Again, thank you so much for your patience and feel free to let us know if you have any questions. See you next month!
