--- a/emails/templates/return.html
+++ b/emails/templates/return.html
@@ -1,8 +1,7 @@
 <h2 style="padding-bottom: 1rem;">Hi hackers,</h2>
 <p style="padding-bottom: 0.5rem;">
-  Hope you are doing well. First and foremost, thank you so much for your patience in bearing with us through the
-  unexpected venue situation. We understand that the last minute change was very disappointing and apologize for not
-  finding a suitable venue sooner.
+  Thank you so much for your patience in bearing with us through the unexpected venue situation. We understand how
+  disappointing the last minute change was and apologize for not finding a suitable venue sooner.
 </p>
 <p style="padding-bottom: 0.5rem;">
   That being said, <strong>Hack the Nest is coming to Tysons, VA this December 9 - 10!</strong> We're super excited to .
@@ -12,6 +11,6 @@
   rsvp form, discord link, schedule, more details coming soon (parking, overnight, what to bring, arrival/dept.)
 </p>
 <p style="padding-bottom: 0.5rem;">
-  Again, thank you so much for your patience and feel free to let us know if you have any questions. See you next month!
+  Feel free to let us know if you have any questions. See you next month!
 </p>
 <p style="padding-top: 1rem;">- Hack the Nest Team 🪺</p>
