--- a/emails/templates/return.html
+++ b/emails/templates/return.html
@@ -8,7 +8,8 @@
   schedule, preview
 </p>
 <p style="padding-bottom: 0.5rem;">
-  rsvp form, discord link, schedule, more details coming soon (parking, overnight, what to bring, arrival/dept.)
+  rsvp form, discord link, schedule, more details coming soon (parking, overnight, what to bring, arrival/dept.),
+  registration closes dec 2, venue details like in faq, travel reimburse
 </p>
 <p style="padding-bottom: 0.5rem;">
   Feel free to let us know if you have any questions. See you next month!
