small changes or something

--- a/emails/templates/hackerConfirmation.html
+++ b/emails/templates/hackerConfirmation.html
@@ -1,10 +1,18 @@
 <h2 style="padding-bottom: 1rem;">Hi {{ name }}!</h2>
-<p style="padding-bottom: 0.5rem;">Thank you for registering for Hack the Nest - we're so excited to see you in the
-  future!</p>
-<p>
-  Please be on the lookout for more details on the exact event location, date, and RSVP via email, social media (linked
-  below), and our
-  <a href="https://www.hackthenest.org/" target="_blank">website</a>
-  as the event approaches, and feel free to let us know at hello@hackthenest.org if you have any questions.
+<p style="padding-bottom: 0.5rem;">Thank you for registering for Hack the Nest!</p>
+<p style="padding-bottom: 0.5rem;">
+  Please confirm your attendance via the RSVP form
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQ7J-A7zxYnGZCOp2-ccHLd-i7NLMBNqZBEWzyTnDvLFY4vA/viewform?usp=sf_link"
+    target="blank">here</a>.
+  After that, join our
+  <a href="">Discord</a>
+  to ask any questions, form a team, and stay updated on the day of the event! Finally, if you are driving or taking a
+  bus/train, check out Hack Club's
+  <a href="https://gas.hackclub.com/" target="_blank">gas fund</a>
+  for travel reimbursements.
+</p>
+<p style="padding-bottom: 0.5rem;">
+  Look out for more details in the coming weeks - until then, feel free to let us know if you have any questions. We're
+  so excited to see you and the amazing projects and friendships you'll create in Tysons this December!
 </p>
 <p style="padding-top: 1rem;">- Hack the Nest Team 🪺</p>
