--- a/emails/templates/return.html
+++ b/emails/templates/return.html
@@ -4,14 +4,26 @@
   disappointing the last minute change was and apologize for not finding a suitable venue sooner.
 </p>
 <p style="padding-bottom: 0.5rem;">
-  That being said, <strong>Hack the Nest is coming to Tysons, VA this December 9 - 10!</strong> We're super excited to .
-  schedule, preview
+  That being said, <strong>Hack the Nest is coming to Tysons, VA this December 9 - 10!</strong> The event will be held
+  at Intelligent Office on the 3rd floor of the Bank of America building just across the street from Tysons Corner
+  Center. We're super excited to be offering free meals, snacks, and shirts, over a dozen workshops and mini-events,
+  $10,000+ in prizes including four Nintendo Switch Lites, $1,500 in cash, Beats wireless earbuds, and more! See our
+  tentative schedule
+  <a href="https://www.hackthenest.org/#schedule" target="_blank">here</a>.
 </p>
 <p style="padding-bottom: 0.5rem;">
-  rsvp form, discord link, schedule, more details coming soon (parking, overnight, what to bring, arrival/dept.),
-  registration closes dec 2, venue details like in faq, travel reimburse
+  Please confirm your attendance via the RSVP form
+  <a href="https://docs.google.com/forms/d/e/1FAIpQLSeQ7J-A7zxYnGZCOp2-ccHLd-i7NLMBNqZBEWzyTnDvLFY4vA/viewform?usp=sf_link"
+    target="blank">here</a>.
+  After that, join our
+  <a href="">Discord</a>
+  to ask any questions, form a team, and stay updated on the day of the event! Finally, if you are driving or taking a
+  bus/train, check out Hack Club's
+  <a href="https://gas.hackclub.com/" target="_blank">gas fund</a>
+  for travel reimbursements.
 </p>
 <p style="padding-bottom: 0.5rem;">
-  Feel free to let us know if you have any questions. See you next month!
+  Look out for more details in the coming weeks - until then, feel free to let us know if you have any questions. We're
+  so excited to see you and the amazing projects and friendships you'll create in Tysons next month!
 </p>
 <p style="padding-top: 1rem;">- Hack the Nest Team 🪺</p>
